[package]
name = "leptos-keycloak-auth"
version = "0.6.1"
edition = "2024"
rust-version = "1.85.0"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/lpotthast/leptos-keycloak-auth"
description = "Secure Leptos applications using Keycloak."
categories = ["web-programming", "api-bindings", "network-programming"]
keywords = ["leptos", "keycloak", "auth", "oidc", "oauth"]
include = ["src/**/*", "LICENSE-*", "README.md"]

[features]
ssr = []
internals = []

[dependencies]
base64 = "0.22"
codee = { version = "0.3", features = ["json_serde"] }
http = "1.3"
itertools = "0.14"
jsonwebtoken = "9.3"
leptos = "0.8"
leptos-use = { git = "https://github.com/Synphonyte/leptos-use", branch = "main", default-features = false, features = [
    "use_interval",
    "storage",
] }
leptos_router = "0.8"
rand = "0.9"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
snafu = "0.8.5"
time = { version = "0.3", features = ["wasm-bindgen", "serde"] }
tracing = "0.1.41"
url = { version = "2.5", features = ["serde"] }

[dev-dependencies]
anyhow = "1.0"
assertr = "0.1"
axum = "0.8"
# Must stick to 0.7 until leptos is updated to 0.8 (which brings support for axum 0.8).
axum-keycloak-auth = "0.8"
chrome-for-testing-manager = { git = "https://github.com/kirinse/chrome-for-testing-manager", features = [
    "thirtyfour",
] }
http = "1.3"
keycloak = "26.2"
testcontainers = "0.24"
thirtyfour = "0.35"
tokio = "1.44"
tokio-process-tools = "0.4"
tower = "0.5"
tower-http = { version = "0.6", features = ["full"] }
tracing-subscriber = "0.3"
uuid = { version = "1.16", features = ["v7", "serde"] }

[patch.crates-io]
ring = { git = "https://github.com/kirinse/ring", branch = "main" }
